--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@apollo/client": "^3.10.3",
+    "@aws-amplify/cli": "^12.12.0",
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
+    "aws-amplify": "^6.3.0",
     "expo": "~51.0.1",
     "expo-font": "~12.0.4",
     "expo-linking": "~6.3.1",
@@ -23,6 +26,7 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.4",
     "expo-web-browser": "~13.0.3",
+    "graphql": "^15.8.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
